# EC601-Team21-CorporateAirspaceSecurity

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
Samples/: 1M.csv  README.md  airband.csv  file.csv  test.csv
airsec/: __init__.py  config.py  db.py  iface_utils.py  interfaces.py  sdr_scanner.py  wifi_scanner.py
airsec/applications/: __init__.py  rf_monitor.py  wifi_monitor.py
airsec/web/: api.py
airsec/web/static/: app.css  app.js  fonts.css
airsec/web/templates/: index.html
applications/: wifi_monitor.py
config/: airsec-monitor.service  airsec-web.service  airsec.conf.yaml
docs/: 802.11_Notes.md  Architecture.md  MVP_Definition.md  Rogue_AP.md  SoftwareArchitecture.drawio  User_Stories.md  WifiIdentification.md  jamming.md  raspberrypi_setup.md
docs/SDR/: rtl_power.md
scripts/: deploy.sh  packet_capture.py  rtl_rssi.py  setup-monitor.sh  wifi_monitor.py
scripts/SDR/: audio_tones.py  heatmap.py  rfjam.py  rogue_alert.py
tests/: test_database.py  test_interfaces.py
